# eventflow-commerce

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  docker-compose.yml  go.work  go.work.sum
.github/actions/setup-go/: action.yml
.github/workflows/: main.yml
docs/api/: README.md  orders.yaml
docs/architecture/: README.md  caching.md  deployment-architecture.md  distributed-tracing.md  event-sourcing.md  observability.md  resilience.md  saga-pattern.md  zero-downtime-deployment.md
docs/architecture/adr/: 001-microservices.md  README.md
docs/guides/: deployment.md  development.md
infrastructure/kafka/: server.properties
infrastructure/prometheus/: prometheus.yml
infrastructure/redis/: redis.conf
scripts/: init-databases.sh
services/api-gateway/: Dockerfile  go.mod  go.sum
services/api-gateway/test/: enhanced_test.go  integration_test.go
services/inventory/: Dockerfile  go.mod  go.sum
services/inventory/migrations/: 000001_create_inventory_tables.down.sql  000001_create_inventory_tables.up.sql
services/notification/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/notification/migrations/: 000001_create_notifications_tables.down.sql  000001_create_notifications_tables.up.sql
services/notification/notification/: main.py
services/notification/notification/config/: config.py
services/notification/tests/: test_main.py
services/order/: Dockerfile  go.mod  go.sum
services/order/migrations/: 000001_create_orders_tables.down.sql  000001_create_orders_tables.up.sql
services/payment/: Dockerfile  go.mod
services/payment/migrations/: 000001_create_event_store.down.sql  000001_create_event_store.up.sql
shared/libs/: go.mod  go.sum
shared/libs/config/: types.go
shared/libs/database/: postgres.go  redis.go
shared/libs/errors/: errors.go
shared/libs/events/: kafka.go
(+28 files in other folders)
