[tool.poetry]
name = "notification"
version = "0.1.0"
description = "EventFlow Commerce Notification Service"
authors = ["Kalaganov-Konstantin <kalaganov.konstant@gmail.com>"]
packages = [{include = "notification"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.116.1"}
prometheus-client = "^0.22.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
pytest = "^8.4.1"
