[project]
name = "notification"
version = "0.1.0"
description = "EventFlow Commerce Notification Service"
authors = [
    {name = "Kalaganov-Konstantin", email = "kalaganov.konstant@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "prometheus-client>=0.22.1",
    "psycopg2-binary>=2.9.10",
    "yoyo-migrations>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.4",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notification"]
